parser.output
Terminals unused in grammar

    WRITE


Grammar

    0 $accept: program $end

    1 program: declarations statements

    2 declarations: %empty
    3             | declarations declaration

    4 declaration: TYPE ID SEMICOLON

    5 statements: %empty
    6           | statements statement

    7 statement: ID EQ expression SEMICOLON

    8 expression: NUMBER
    9           | ID


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    TYPE <string> (258) 4
    ID <string> (259) 4 7 9
    NUMBER <number> (260) 8
    WRITE (261)
    SEMICOLON (262) 4 7
    EQ (263) 7


Nonterminals, with rules where they appear

    $accept (9)
        on left: 0
    program <node> (10)
        on left: 1
        on right: 0
    declarations <node> (11)
        on left: 2 3
        on right: 1 3
    declaration <node> (12)
        on left: 4
        on right: 3
    statements <node> (13)
        on left: 5 6
        on right: 1 6
    statement <node> (14)
        on left: 7
        on right: 6
    expression <node> (15)
        on left: 8 9
        on right: 7


State 0

    0 $accept: • program $end

    $default  reduce using rule 2 (declarations)

    program       go to state 1
    declarations  go to state 2


State 1

    0 $accept: program • $end

    $end  shift, and go to state 3


State 2

    1 program: declarations • statements
    3 declarations: declarations • declaration

    TYPE  shift, and go to state 4

    $default  reduce using rule 5 (statements)

    declaration  go to state 5
    statements   go to state 6


State 3

    0 $accept: program $end •

    $default  accept


State 4

    4 declaration: TYPE • ID SEMICOLON

    ID  shift, and go to state 7


State 5

    3 declarations: declarations declaration •

    $default  reduce using rule 3 (declarations)


State 6

    1 program: declarations statements •
    6 statements: statements • statement

    ID  shift, and go to state 8

    $default  reduce using rule 1 (program)

    statement  go to state 9


State 7

    4 declaration: TYPE ID • SEMICOLON

    SEMICOLON  shift, and go to state 10


State 8

    7 statement: ID • EQ expression SEMICOLON

    EQ  shift, and go to state 11


State 9

    6 statements: statements statement •

    $default  reduce using rule 6 (statements)


State 10

    4 declaration: TYPE ID SEMICOLON •

    $default  reduce using rule 4 (declaration)


State 11

    7 statement: ID EQ • expression SEMICOLON

    ID      shift, and go to state 12
    NUMBER  shift, and go to state 13

    expression  go to state 14


State 12

    9 expression: ID •

    $default  reduce using rule 9 (expression)


State 13

    8 expression: NUMBER •

    $default  reduce using rule 8 (expression)


State 14

    7 statement: ID EQ expression • SEMICOLON

    SEMICOLON  shift, and go to state 15


State 15

    7 statement: ID EQ expression SEMICOLON •

    $default  reduce using rule 7 (statement)
